fix: login center alignment

--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,15 +1,14 @@
 .loginContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* height: 100vh; */
-    width: 100vh;
+    width: 100%;
   }
   
   .loginContainerv2 {
     text-align: center;
     color: white;
     width: 40%;
+
+    margin-left: auto;
+    margin-right: auto;
   }
 
 
